--- a/Html/Site/ClinicaMedica/contato.html
+++ b/Html/Site/ClinicaMedica/contato.html
@@ -27,7 +27,7 @@
 
         <div class="main">
             <div class="header"
-                style="background-image: url(/img/contato.png);background-size: cover ;background-position: 0%;">
+                style="background-image: url(img/contato.png);background-size: cover ;background-position: 0%;">
                 <!-- Aqui vai o seu header -->
 
             </div>
@@ -41,17 +41,40 @@
                             <input type="text" name="nome" placeholder="Nome" /><br>
                             <input type="email" name="email" placeholder="Email" /><br>
                             <input type="text" name="assunto " placeholder="Assunto" /><br>
-                             <textarea  name="mensagem" placeholder="Mensagem" id="" cols="30" rows="10"></textarea>
+                            <textarea name="mensagem" placeholder="Mensagem" id="" cols="30" rows="10"></textarea>
                         </div>
-                            <button type="submit">Enviar</button>
-                            <button type="reset">Limpar</button>
+                        <button type="submit">Enviar</button>
+                        <button type="reset">Limpar</button>
 
                     </form>
                 </fieldset>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.4488920879176!2d-38.49547818509386!3d-13.007061390832602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71603348443f9c9%3A0xca1b7c0c001b0dbd!2sRede%20Mater%20Dei%20de%20Sa%C3%BAde%20-%20Mater%20Dei%20Salvador!5e0!3m2!1spt-BR!2sbr!4v1666120095364!5m2!1spt-BR!2sbr"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="informacoes">
+                    <div>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.4488920879176!2d-38.49547818509386!3d-13.007061390832602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71603348443f9c9%3A0xca1b7c0c001b0dbd!2sRede%20Mater%20Dei%20de%20Sa%C3%BAde%20-%20Mater%20Dei%20Salvador!5e0!3m2!1spt-BR!2sbr!4v1666120095364!5m2!1spt-BR!2sbr"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+                    <div style="display: grid;padding: 20px;align-items: start;">
+                        <i class="fa-solid fa-location-dot" style="align-self: end;"></i>
+                       <p > Av. Vasco da Gama, 6783 - Engenho Velho da Federação, Salvador -
+                            BA, 40220-005</p>
+                        <fieldset>
+                            <legend>Telefones para contato</legend>
+                            <table>
+                                <tr>
+                                    <th>Telefone comercial:</th>
+                                    <td>(71) 3333-3333</td>
+                                </tr>
+                                <tr>
+                                    <th><i class="fa-brands fa-whatsapp"></i> Whatsapp:</th>
+                                    <td>(71) 99999-9999</td>
+                                </tr>
+                            </table>
+                        </fieldset>
+                    </div>
+                </div>
             </div>
             <footer>
                 <div class="footer-social-media ">
