--- a/Html/Site/ClinicaMedica/horario.html
+++ b/Html/Site/ClinicaMedica/horario.html
@@ -27,50 +27,58 @@
 
         <div class="main">
             <div class="header"
-                style="background-image: url(/img/agendamentos.png);background-size:80%;background-position: 30%; ">
+                style="background-image: url(img/agendamentos.png);background-size:80%;background-position: 30%; ">
                 <!-- Aqui vai o seu header -->
 
             </div>
 
             <div class="content">
                 <!-- Aqui vai o seu conteúdo -->
-                <table  width="700" cellpadding="10" cellspacing ="0" align="center" >
-                    <caption>Horários para agendamentos</caption>
-                    <thead>
-                        <tr>
-                            <th>Servicos</th>
-                            <th>Segunda a Sexta</th>
-                            <th>Sábados</th>
-                            <th>Feriados</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Clinica geral</td>
-                            <td>08h -19h</td>
-                            <td>08h -14h</td>
-                            <td>08h -14h</td>
-                        </tr>
-                        <tr>
-                            <td>Pscicologia</td>
-                            <td>08h -19h</td>
-                            <td>08h -14h</td>
-                            <td>08h -14h</td>
-                        </tr>
-                        <tr>
-                            <td>Pediatria</td>
-                            <td>08h -19h</td>
-                            <td>08h -18h</td>
-                            <td>-</td>
-                        </tr>
-                        <tr>
-                            <td>Oftalmologia</td>
-                            <td>08h -19h</td>
-                            <td>08h -18h</td>
-                            <td>-</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div id="servicos">
+                    Avaliação Psicológica, Exames Laboratoriais, Teste Ergométrico, Eletroencefalograma,
+                    Eletrocardiograma, Fisioterapia, Raio-X, Oftalmologia e outros serviços.
+                </div>
+                <div id="agendamento">
+                    <table width="700" cellpadding="10" cellspacing="0" align="center">
+                        <caption>
+                            <h2>Horários para agendamentos</h2>
+                        </caption>
+                        <thead>
+                            <tr>
+                                <th>Servicos</th>
+                                <th>Segunda a Sexta</th>
+                                <th>Sábados</th>
+                                <th>Feriados</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Clinica geral</td>
+                                <td>08h -19h</td>
+                                <td>08h -14h</td>
+                                <td>08h -14h</td>
+                            </tr>
+                            <tr>
+                                <td>Pscicologia</td>
+                                <td>08h -19h</td>
+                                <td>08h -14h</td>
+                                <td>08h -14h</td>
+                            </tr>
+                            <tr>
+                                <td>Pediatria</td>
+                                <td>08h -19h</td>
+                                <td>08h -18h</td>
+                                <td>-</td>
+                            </tr>
+                            <tr>
+                                <td>Oftalmologia</td>
+                                <td>08h -19h</td>
+                                <td>08h -18h</td>
+                                <td>-</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <footer>
                 <div class="footer-social-media ">
