--- a/Html/Site/ClinicaMedica/index.html
+++ b/Html/Site/ClinicaMedica/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    
+
     <div class="wrapper">
         <div class="menu ">
             <!-- Aqui vai o seu menu -->
-            <ul >
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="sobre.html">Sobre a Clínica</a></li>
                 <li><a href="horario.html">Horários</a></li>
@@ -26,14 +26,47 @@
         </div>
 
         <div class="main">
-            <div class="header" style="background-image: url(/img/header-index.png);">
+            <div class="header" style="background-image: url(img/header-index.png);">
                 <!-- Aqui vai o seu header -->
 
             </div>
 
             <div class="content">
-                Content
                 <!-- Aqui vai o seu conteúdo -->
+                <div class="resumo">
+                    <div>
+                        <img src="img/joana.jpg" alt="Foto da funcionaria" style="width: 94%;">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente numquam voluptatibus
+                            amet
+                            aliquam explicabo reprehenderit temporibus libero id tempora suscipit soluta, dicta eos
+                            asperiores repellat praesentium maxime cumque maiores voluptatum.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente numquam voluptatibus
+                            amet
+                            aliquam explicabo reprehenderit temporibus libero id tempora suscipit soluta, dicta eos
+                            asperiores repellat praesentium maxime cumque maiores voluptatum.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente numquam voluptatibus
+                            amet
+                            aliquam explicabo reprehenderit temporibus libero id tempora suscipit soluta, dicta eos
+                            asperiores repellat praesentium maxime cumque maiores voluptatum.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente numquam voluptatibus
+                            amet
+                            aliquam explicabo reprehenderit temporibus libero id tempora suscipit soluta, dicta eos
+                            asperiores repellat praesentium maxime cumque maiores voluptatum.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente numquam voluptatibus
+                            amet
+                            aliquam explicabo reprehenderit temporibus libero id tempora suscipit soluta, dicta eos
+                            asperiores repellat praesentium maxime cumque maiores voluptatum.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente numquam voluptatibus
+                            amet
+                            aliquam explicabo reprehenderit temporibus libero id tempora suscipit soluta, dicta eos
+                            asperiores repellat praesentium maxime cumque maiores voluptatum.</p>
+                            
+
+
+                    </div>
+                </div>
             </div>
             <footer>
                 <div class="footer-social-media ">
