--- a/Html/Site/ClinicaMedica/sobre.html
+++ b/Html/Site/ClinicaMedica/sobre.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template - Utilizar como modelo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;800&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,11 +16,11 @@
 </head>
 
 <body>
-    
+
     <div class="wrapper">
         <div class="menu ">
             <!-- Aqui vai o seu menu -->
-            <ul >
+            <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="sobre.html">Sobre a Clínica</a></li>
                 <li><a href="horario.html">Horários</a></li>
@@ -26,14 +29,26 @@
         </div>
 
         <div class="main">
-            <div class="header" style="background-image: url(/img/sobre.jpeg);background-size: cover;">
+            <div class="header" style="background-image: url(img/sobre.jpeg);background-size: cover;">
                 <!-- Aqui vai o seu header -->
 
             </div>
 
             <div class="content">
-                Content
                 <!-- Aqui vai o seu conteúdo -->
+                <h2 class="titulo">Sobre Clínica Médica</h2>
+                <div class="sobre">
+                    A Clínica Médica é a especialidade da Medicina focada no diagnóstico e tratamento clínico das
+                    patologias em adultos, ou seja, sem cirurgia.O médico desta especialidade é responsável por avaliar
+                    o paciente de maneira completa e está apto a resolver a maioria das enfermidades, além de gerenciar
+                    o cuidado do paciente indicando o especialista adequado, caso haja necessidade.
+                
+                <br><br>
+                    A Rede Mater Dei de Saúde coloca à disposição dos clientes, 24 horas por dia, clínicos médicos
+                    capacitados para o atendimento de urgência e emergência nos Prontos-socorros do Mater Dei Santo
+                    Agostinho, do Mater Dei Contorno e Mater Dei Betim-Contagem. Além disso, a Rede disponibiliza toda a
+                    estrutura necessária para que o diagnóstico seja feito da maneira mais rápida e eficaz possível.
+                </div>
             </div>
             <footer>
                 <div class="footer-social-media ">
